--- a/ui/package.json
+++ b/ui/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "graphql": "^15.5.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
