--- a/graphql-server/gqlgen.yml
+++ b/graphql-server/gqlgen.yml
@@ -54,7 +54,7 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
-  AssociatedReview:
-    fields:
-      product:
-        resolver: true # force a resolver to be generated
+  # AssociatedReview:
+  #   fields:
+  #     product:
+  #       resolver: true # force a resolver to be generated
